# algolab

./: README.md  pyproject.toml
dokumentaatio/: maarittelydokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti4.md
src/: app.py  ui.py
src/entities/: piece.py
src/game/: shakki.py
src/tests/: test_shakki.py
src/ui/: user_interface.py
